--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -36,6 +36,7 @@ body {
   font-family: var(--font-default);
   color: var(--color-default);
   background-color: #000;
+  background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(20,20,20,1) 100%);
 }
 
 a {
@@ -287,7 +288,6 @@ h6 {
   z-index: 997;
   padding: 30px 0;
   background-color: #000;
-  background-image: url("../img/");
 }
 
 .header .logo {
